2007-07-13  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el: Shorten some comments to fit within 80 lines.

2007-07-13  Karl Fogel  <kfogel@red-bean.com>

	* bookmark.el: Don't define bookmark keys under the "C-xr" map;
	instead, make "C-xp" a prefix for bookmark-map.  Patch by Drew
	Adams <drew.adams{_AT_}oracle.com>, mildly tweaked by me.  See
	http://lists.gnu.org/archive/html/emacs-devel/2007-07/msg00633.html.

2007-07-13  Carsten Dominik  <dominik@science.uva.nl>

	* textmodes/org.el: Bug fixes.
	(org-end-of-line): Move to end of line if in headline without
	tags. 

2007-07-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	* vc-hooks.el: Remove spurious * in docstrings.
	(vc-handled-backends): Add BZR.

	* vc-hooks.el (vc-find-file-hook): Use with-demoted-errors.

2007-07-12  Davis Herring  <herring@lanl.gov>

	* desktop.el (desktop-buffer-info, desktop-save):
	Use `desktop-dirname' instead of `dirname'.

2007-07-12  Paul Pogonyshev  <pogonyshev@gmx.net>

	* progmodes/which-func.el (which-func-modes): Add `python-mode'.

	* progmodes/python.el (python-which-func-length-limit): New var.
	(python-which-func): New function.
	(python-current-defun): Add optional `length-limit' and try to fit
	computed function name to that length.
	(python-mode): Hook `python-which-func' up.

2007-07-12  Sean O'Rourke  <sorourke@cs.ucsd.edu>  (tiny change)

	* pcomplete.el (pcomplete-entries): Obey pcomplete-ignore-case.

	* comint.el (comint-dynamic-complete-as-filename):
	Use read-file-name-completion-ignore-case.

2007-07-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* comint.el (comint-dynamic-list-filename-completions):
	Use read-file-name-completion-ignore-case.

	* vc-cvs.el: Require CL.
	(vc-cvs-revision-table, vc-cvs-revision-completion-table):
	New functions to provide completion of revision names.

	* vc-cvs.el (vc-functions): Clear up the cache when reloading the file.
	(vc-cvs-annotate-first-line-re): New const.
	(vc-cvs-annotate-process-filter): New fun.